less spacing in issue notes

--- a/static/css/gcd/default/issue.css
+++ b/static/css/gcd/default/issue.css
@@ -178,12 +178,8 @@ div.issue_notes h3 {
     margin-bottom: 0.15em;
 }
 
-div.issue_notes p {
+div.issue_level_content {
     padding: 0.2em 6px;
-    margin: 0 0 0.5em 0;
-}
-
-div.issue_notes dt {
-    padding-left: 6px;
+    margin: 0 0 0 0;
 }
 
